--- a/test.html
+++ b/test.html
@@ -593,6 +593,6 @@ header, .context-menu, .megamenu-content, footer{
 </style><title>test</title>
 </head>
 <body class='typora-export'><div class='typora-export-content'>
-<div id='write'  class=''><p><img src="test.assets/image-20211014213751944.png" alt="image-20211014213751944" style="zoom:80%;" /></p></div></div>
+<div id='write'  class=''><p><img src="test.assets/image-20211014213751944.png" alt="image-20211014213751944" style="zoom:80%;" /></p><p>&nbsp;</p><p>&nbsp;</p><p><span>note ...</span></p><p><img src="test.assets/image-20211014214419560.png" referrerpolicy="no-referrer" alt="image-20211014214419560"></p></div></div>
 </body>
 </html>
