--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>hello github!</h1>
-    <p><a href="./C++迭代器.html">git note</a></p>
+    <p><a href="./C++迭代器.html">定义C++迭代器</a></p>
 
 </body>
 
