--- a/my.html
+++ b/my.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-03-08 Tue 14:51 -->
+<!-- 2022-03-08 Tue 14:50 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -246,26 +246,243 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org226637b">1. Salted</a>
+<li><a href="#orgf3c12a9">1. org 入门</a>
 <ul>
-<li><a href="#org4badcc3">1.1. myorg</a></li>
+<li><a href="#orgbc35419">1.1. S-tab 对整个文件进行缩进</a></li>
+<li><a href="#org1f9b8e4">1.2. Tab 对特定标题下的内容进行展开/折叠</a></li>
+<li><a href="#org16b4cbc">1.3. C-&lt;RET&gt; 自动创建和上面相同的标题</a></li>
+<li><a href="#org27ae7fd">1.4. M-左/右 对标题的缩进进行调整</a></li>
+<li><a href="#org64575c5">1.5. M-上/下 对标题所在行的位置进行调整</a></li>
+<li><a href="#orga4e0568">1.6. 用三组括号标记链接/图片</a></li>
+<li><a href="#org4665ec1">1.7. 表格 行末按Tab</a></li>
+<li><a href="#orgffee6d4">1.8. 任务状态切换 C-c C-t</a>
+<ul>
+<li><a href="#org1910486">1.8.1. <span class="todo TODO">TODO</span> task1</a></li>
+<li><a href="#org7be334e">1.8.2. <span class="todo TODO">TODO</span> task2</a></li>
+</ul>
+</li>
+<li><a href="#org30c6e81">1.9. 查看整个文件中的todo事项</a></li>
+<li><a href="#org8bcbac3">1.10. 为todo事项添加子任务</a>
+<ul>
+<li><a href="#org0347b51">1.10.1. <span class="todo TODO">TODO</span> some hige task <code>[0/3]</code> <code>[0%]</code> (用C-c C-c来刷新任务进度)</a></li>
+</ul>
+</li>
+<li><a href="#org243d0bb">1.11. <code>C-c [</code> 将文件加入agenda列表中</a>
+<ul>
+<li><a href="#orgde6d85a">1.11.1. t:查看所有todo事项</a></li>
+</ul>
+</li>
+<li><a href="#orga934fa1">1.12. 代码块</a></li>
+<li><a href="#orgf005f43">1.13. C-c d/s 为任务设定开始和截止日期</a>
+<ul>
+<li><a href="#org927950a">1.13.1. <span class="todo TODO">TODO</span> sometask</a></li>
+</ul>
+</li>
+<li><a href="#org3f633ba">1.14. <code>agenda</code> 来查看任务时间表</a></li>
+<li><a href="#org479288b">1.15. 将org导出为html</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org226637b" class="outline-2">
-<h2 id="org226637b"><span class="section-number-2">1</span> Salted</h2>
+<p>
+gtd = get things done
+</p>
+
+<div id="outline-container-orgf3c12a9" class="outline-2">
+<h2 id="orgf3c12a9"><span class="section-number-2">1</span> org 入门</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org4badcc3" class="outline-3">
-<h3 id="org4badcc3"><span class="section-number-3">1.1</span> <a href="./my.html">myorg</a></h3>
+<div id="outline-container-orgbc35419" class="outline-3">
+<h3 id="orgbc35419"><span class="section-number-3">1.1</span> S-tab 对整个文件进行缩进</h3>
+</div>
+
+<div id="outline-container-org1f9b8e4" class="outline-3">
+<h3 id="org1f9b8e4"><span class="section-number-3">1.2</span> Tab 对特定标题下的内容进行展开/折叠</h3>
+</div>
+
+<div id="outline-container-org16b4cbc" class="outline-3">
+<h3 id="org16b4cbc"><span class="section-number-3">1.3</span> C-&lt;RET&gt; 自动创建和上面相同的标题</h3>
+</div>
+
+<div id="outline-container-org27ae7fd" class="outline-3">
+<h3 id="org27ae7fd"><span class="section-number-3">1.4</span> M-左/右 对标题的缩进进行调整</h3>
+</div>
+
+<div id="outline-container-org64575c5" class="outline-3">
+<h3 id="org64575c5"><span class="section-number-3">1.5</span> M-上/下 对标题所在行的位置进行调整</h3>
+</div>
+
+<div id="outline-container-orga4e0568" class="outline-3">
+<h3 id="orga4e0568"><span class="section-number-3">1.6</span> 用三组括号标记链接/图片</h3>
+<div class="outline-text-3" id="text-1-6">
+<div class="org-src-container">
+<pre class="src src-org"><span style="color: #51afef; font-weight: bold; text-decoration: underline;"><a href="http://www.baidu.com">BAIDU</a></span>
+</pre>
+</div>
+</div>
+</div>
+<div id="outline-container-org4665ec1" class="outline-3">
+<h3 id="org4665ec1"><span class="section-number-3">1.7</span> 表格 行末按Tab</h3>
+<div class="outline-text-3" id="text-1-7">
+<table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
+
+
+<colgroup>
+<col  class="org-left" />
+
+<col  class="org-left" />
+
+<col  class="org-left" />
+</colgroup>
+<thead>
+<tr>
+<th scope="col" class="org-left">发萨</th>
+<th scope="col" class="org-left">发大萨</th>
+<th scope="col" class="org-left">发大发大</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="org-left">发萨分</td>
+<td class="org-left">发大发大</td>
+<td class="org-left">发大发大</td>
+</tr>
+
+<tr>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div id="outline-container-orgffee6d4" class="outline-3">
+<h3 id="orgffee6d4"><span class="section-number-3">1.8</span> 任务状态切换 C-c C-t</h3>
+<div class="outline-text-3" id="text-1-8">
+</div>
+<div id="outline-container-org1910486" class="outline-4">
+<h4 id="org1910486"><span class="section-number-4">1.8.1</span> <span class="todo TODO">TODO</span> task1</h4>
+</div>
+
+<div id="outline-container-org7be334e" class="outline-4">
+<h4 id="org7be334e"><span class="section-number-4">1.8.2</span> <span class="todo TODO">TODO</span> task2</h4>
+</div>
+</div>
+
+<div id="outline-container-org30c6e81" class="outline-3">
+<h3 id="org30c6e81"><span class="section-number-3">1.9</span> 查看整个文件中的todo事项</h3>
+<div class="outline-text-3" id="text-1-9">
+<p>
+M-x org-show-todo-tree
+</p>
+</div>
+</div>
+
+<div id="outline-container-org8bcbac3" class="outline-3">
+<h3 id="org8bcbac3"><span class="section-number-3">1.10</span> 为todo事项添加子任务</h3>
+<div class="outline-text-3" id="text-1-10">
+</div>
+<div id="outline-container-org0347b51" class="outline-4">
+<h4 id="org0347b51"><span class="section-number-4">1.10.1</span> <span class="todo TODO">TODO</span> some hige task <code>[0/3]</code> <code>[0%]</code> (用C-c C-c来刷新任务进度)</h4>
+<div class="outline-text-4" id="text-1-10-1">
+<ul class="org-ul">
+<li class="off"><code>[&#xa0;]</code> subtask1 (用C-c C-c切换子任务状态)</li>
+<li class="off"><code>[&#xa0;]</code> 发大发</li>
+<li class="off"><code>[&#xa0;]</code> newtsk</li>
+</ul>
+</div>
+</div>
+</div>
+
+<div id="outline-container-org243d0bb" class="outline-3">
+<h3 id="org243d0bb"><span class="section-number-3">1.11</span> <code>C-c [</code> 将文件加入agenda列表中</h3>
+<div class="outline-text-3" id="text-1-11">
+<p>
+Mx org-agenda 
+</p>
+</div>
+
+<div id="outline-container-orgde6d85a" class="outline-4">
+<h4 id="orgde6d85a"><span class="section-number-4">1.11.1</span> t:查看所有todo事项</h4>
+<div class="outline-text-4" id="text-1-11-1">
+</div>
+<ol class="org-ol">
+<li><a id="orgfcdefdf"></a>在todo事项中用t来切换状态<br /></li>
+<li><a id="orgb67c627"></a>用q退出todo事项列表<br /></li>
+</ol>
+</div>
+</div>
+
+
+<div id="outline-container-orga934fa1" class="outline-3">
+<h3 id="orga934fa1"><span class="section-number-3">1.12</span> 代码块</h3>
+<div class="outline-text-3" id="text-1-12">
+<div class="org-src-container">
+<pre class="src src-C++"><span style="color: #FCCE7B;">int</span> <span style="color: #5cEfFF;">main</span>(){
+<span style="color: #a991f1;">std</span>::cout &lt;&lt; <span style="color: #7bc275;">"hello"</span> ;
+}
+</pre>
+</div>
+</div>
+</div>
+
+
+<div id="outline-container-orgf005f43" class="outline-3">
+<h3 id="orgf005f43"><span class="section-number-3">1.13</span> C-c d/s 为任务设定开始和截止日期</h3>
+<div class="outline-text-3" id="text-1-13">
+<p>
++3d 5pm
+</p>
+
+<p>
++1m
+</p>
+
+<p>
++1w
+</p>
+</div>
+
+<div id="outline-container-org927950a" class="outline-4">
+<h4 id="org927950a"><span class="section-number-4">1.13.1</span> <span class="todo TODO">TODO</span> sometask</h4>
+<div class="outline-text-4" id="text-1-13-1">
+</div>
+</div>
+</div>
+
+<div id="outline-container-org3f633ba" class="outline-3">
+<h3 id="org3f633ba"><span class="section-number-3">1.14</span> <code>agenda</code> 来查看任务时间表</h3>
+<div class="outline-text-3" id="text-1-14">
+<p>
+M-x org-agenda -&gt; a
+</p>
+
+<p>
+f/b 来进行上下翻页
+</p>
+
+<p>
+n/p 上一行/下一行
+</p>
+</div>
+</div>
+
+<div id="outline-container-org479288b" class="outline-3">
+<h3 id="org479288b"><span class="section-number-3">1.15</span> 将org导出为html</h3>
+<div class="outline-text-3" id="text-1-15">
+<p>
+<code>M-x org-html-export-to-html</code>
+</p>
+</div>
 </div>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Salted-PC</p>
-<p class="date">Created: 2022-03-08 Tue 14:51</p>
+<p class="date">Created: 2022-03-08 Tue 14:50</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
