--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-03-08 Tue 14:59 -->
+<!-- 2022-04-20 Wed 20:30 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -242,25 +242,13 @@ for the JavaScript code in this tag.
 </head>
 <body>
 <div id="content">
-<div id="table-of-contents">
-<h2>Table of Contents</h2>
-<div id="text-table-of-contents">
-<ul>
-<li><a href="#org730a47d">1. myorg</a></li>
-</ul>
-</div>
-</div>
 <p>
-Salted 
+<a href="./elisp-insert-code-block.html">快速插入代码块</a>
 </p>
-
-<div id="outline-container-org730a47d" class="outline-2">
-<h2 id="org730a47d"><span class="section-number-2">1</span> <a href="./my.html">myorg</a></h2>
-</div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Salted-PC</p>
-<p class="date">Created: 2022-03-08 Tue 14:59</p>
+<p class="date">Created: 2022-04-20 Wed 20:30</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
