--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-04-21 Thu 10:11 -->
+<!-- 2022-04-23 Sat 16:03 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>目录</title>
@@ -244,20 +244,24 @@ for the JavaScript code in this tag.
 <div id="content">
 <h1 class="title">目录</h1>
 
-<div id="outline-container-org268276d" class="outline-2">
-<h2 id="org268276d"><a href="./elisp-insert-code-block.html">快速插入代码块</a></h2>
+<div id="outline-container-org4d97ed4" class="outline-2">
+<h2 id="org4d97ed4"><a href="./elisp-insert-code-block.html">快速插入代码块</a></h2>
 </div>
 
-<div id="outline-container-org5c6e408" class="outline-2">
-<h2 id="org5c6e408"><a href="./emacs-coding.html">Emacs org文件编码问题</a></h2>
+<div id="outline-container-orgeda3344" class="outline-2">
+<h2 id="orgeda3344"><a href="./emacs-coding.html">Emacs org文件编码问题</a></h2>
 </div>
-<div id="outline-container-org9b38d0d" class="outline-2">
-<h2 id="org9b38d0d"><a href="./linux-note.html">linux命令杂记</a></h2>
+<div id="outline-container-org857bfbd" class="outline-2">
+<h2 id="org857bfbd"><a href="./linux-note.html">linux命令杂记</a></h2>
+</div>
+
+<div id="outline-container-orga72504c" class="outline-2">
+<h2 id="orga72504c"><a href="./cpp-primer.html">C++ primer杂记</a></h2>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Salted-PC</p>
-<p class="date">Created: 2022-04-21 Thu 10:11</p>
+<p class="date">Created: 2022-04-23 Sat 16:03</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
