--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-05-04 三 15:07 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>目录</title>
@@ -192,36 +191,46 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { width: 90%; }
 </style>
+<link rel="stylesheet" type="text/css" href="./myorg.css"/>
 </head>
 <body>
 <div id="content" class="content">
 <h1 class="title">目录</h1>
-
-<div id="outline-container-org076ab21" class="outline-2">
-<h2 id="org076ab21"><a href="./elisp-insert-code-block.html">快速插入代码块</a></h2>
+<div id="table-of-contents" role="doc-toc">
+<h2>Table of Contents</h2>
+<div id="text-table-of-contents" role="doc-toc">
+<ul>
+<li><a href="#org147d506">快速插入代码块</a></li>
+<li><a href="#org84b68b1">Emacs org文件编码问题</a></li>
+<li><a href="#org0c325c9">linux命令杂记</a></li>
+<li><a href="#org6633a22">C++ primer杂记</a></li>
+<li><a href="#orgb73bf41">CMake学习</a></li>
+<li><a href="#org4610ec3">OCaml杂记</a></li>
+</ul>
+</div>
 </div>
 
-<div id="outline-container-org532f2cf" class="outline-2">
-<h2 id="org532f2cf"><a href="./emacs-coding.html">Emacs org文件编码问题</a></h2>
+<div id="outline-container-org147d506" class="outline-2">
+<h2 id="org147d506"><a href="./elisp-insert-code-block.html">快速插入代码块</a></h2>
 </div>
-<div id="outline-container-org5af9960" class="outline-2">
-<h2 id="org5af9960"><a href="./linux-note.html">linux命令杂记</a></h2>
+<div id="outline-container-org84b68b1" class="outline-2">
+<h2 id="org84b68b1"><a href="./emacs-coding.html">Emacs org文件编码问题</a></h2>
+</div>
+<div id="outline-container-org0c325c9" class="outline-2">
+<h2 id="org0c325c9"><a href="./linux-note.html">linux命令杂记</a></h2>
+</div>
+<div id="outline-container-org6633a22" class="outline-2">
+<h2 id="org6633a22"><a href="./cpp-primer.html">C++ primer杂记</a></h2>
+</div>
+<div id="outline-container-orgb73bf41" class="outline-2">
+<h2 id="orgb73bf41"><a href="./cmake-learning.html">CMake学习</a></h2>
 </div>
 
-<div id="outline-container-orge0916fc" class="outline-2">
-<h2 id="orge0916fc"><a href="./cpp-primer.html">C++ primer杂记</a></h2>
-</div>
-
-<div id="outline-container-org784eafa" class="outline-2">
-<h2 id="org784eafa"><a href="./cmake-learning.html">CMake学习</a></h2>
-</div>
-
-<div id="outline-container-orgbf132eb" class="outline-2">
-<h2 id="orgbf132eb"><a href="./ocaml-book.html">OCaml杂记</a></h2>
+<div id="outline-container-org4610ec3" class="outline-2">
+<h2 id="org4610ec3"><a href="./ocaml-book.html">OCaml杂记</a></h2>
 </div>
 </div>
 <div id="postamble" class="status">
-<p class="date">Created: 2022-05-04 三 15:07</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
