repair index links

--- a/index.html
+++ b/index.html
@@ -23,28 +23,28 @@
 <div id="content" class="content">
 <h1 class="title">Salted's blog</h1>
 
-<div id="outline-container-org2c0bf03" class="outline-2">
-<h2 id="org2c0bf03">目录</h2>
-<div class="outline-text-2" id="text-org2c0bf03">
+<div id="outline-container-orgc356ad1" class="outline-2">
+<h2 id="orgc356ad1">目录</h2>
+<div class="outline-text-2" id="text-orgc356ad1">
 </div>
-<div id="outline-container-org6f2679d" class="outline-3">
-<h3 id="org6f2679d"><a href="./elisp-insert-code-block.html">快速插入代码块</a></h3>
+<div id="outline-container-orgf1cd525" class="outline-3">
+<h3 id="orgf1cd525"><a href="./elisp-insert-code-block.html">快速插入代码块</a></h3>
 </div>
-<div id="outline-container-orge9c5167" class="outline-3">
-<h3 id="orge9c5167"><a href="./emacs-coding.html">Emacs org文件编码问题</a></h3>
+<div id="outline-container-org626a791" class="outline-3">
+<h3 id="org626a791"><a href="./emacs-coding.html">Emacs org文件编码问题</a></h3>
 </div>
-<div id="outline-container-org110c29e" class="outline-3">
-<h3 id="org110c29e"><a href="./linux-note.html">linux命令杂记</a></h3>
+<div id="outline-container-org918dac4" class="outline-3">
+<h3 id="org918dac4"><a href="./linux-note.html">linux命令杂记</a></h3>
 </div>
-<div id="outline-container-org2f1892b" class="outline-3">
-<h3 id="org2f1892b"><a href="./cpp-primer.html">C++ primer杂记</a></h3>
+<div id="outline-container-orgcb7800c" class="outline-3">
+<h3 id="orgcb7800c"><a href="./cpp-primer.html">C++ primer杂记</a></h3>
 </div>
-<div id="outline-container-orgbfb8370" class="outline-3">
-<h3 id="orgbfb8370"><a href="./cmake-learning.html">CMake学习</a></h3>
+<div id="outline-container-org6c779c9" class="outline-3">
+<h3 id="org6c779c9"><a href="./cmake-learning.html">CMake学习</a></h3>
 </div>
 
-<div id="outline-container-orgcc5869c" class="outline-3">
-<h3 id="orgcc5869c"><a href="./ocaml-book/ocaml-book.html">OCaml杂记</a></h3>
+<div id="outline-container-orgfea535b" class="outline-3">
+<h3 id="orgfea535b"><a href="./ocaml-book/ocaml-book.html">OCaml杂记</a></h3>
 </div>
 </div>
 </div>
